<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.escproject.MyQuizActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewQuestion"
        android:layout_width="match_parent"
        android:layout_above="@+id/btn_submit"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content" />

    <Button
        android:text="Submit"
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
